# software_engineering_project

./: Dockerfile  README.md  compose.yaml  links_and_credentials.txt  pyproject.toml
02-Implementation/source_code/: Dockerfile  compose.yaml  docker-entrypoint.sh
02-Implementation/source_code/online_delivery/: manager.py  views.py
02-Implementation/source_code/online_delivery/management/commands/: initadmin.py
02-Implementation/source_code/online_delivery/migrations/: 0001_initial.py
02-Implementation/source_code/templates/online_delivery/: index.html  productcategory_detail.html
02-Implementation/source_code/templates/registration/: login.html
02-Implementation/source_code/tests/integration/: test_product_category.py
SoftwareEngineeringProject/: settings.py  urls.py
online_delivery/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
online_delivery/migrations/: 0001_initial.py  0002_mock_data.py  0003_alter_order_options_alter_product_options_and_more.py  0004_order_product_count.py
templates/: base.html
templates/include/: header.html
templates/online_delivery/: index.html  order_detail.html  order_list.html  product_detail.html  product_list.html  productcategory_list.html
tests/integration/: test_order.py  test_product.py  tests_restaurant.py
