[tool.poetry]
name = "softwareengineeringproject"
version = "0.1.0"
description = ""
authors = ["Doniyor Rufatov <Doniyor_Rufatov@epam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
pillow = "^11.0.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.8.0"
django-stubs = "^5.1.1"

[tool.mypy]
python_version = 3.11
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
